--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,29 @@
+html {
+    font-size: 30px;
+}
+
 body {
     text-align: center;
     background-color: white;
     font-family: 'Baloo Tammudu', cursive;
 }
 
+.title {
+    font-size: 4rem;
+    font-family: 'Baloo Tammudu', cursive;
+    /*color: red;*/
+}
+
 h2 {
-    font-size: 2.2em;
+    font-size: 1.4rem;
 }
 
 h3 {
-    font-size: 1.9em;
+    font-size: 1.1rem;
+}
+
+#inputForm {
+    /*font-size: 2rem;*/
 }
 
 .container {
@@ -17,18 +31,12 @@ h3 {
 }
 
 .mainer {
-    margin-top: 100px; 
+    margin-top: 70px; 
 
 }
 
 div {
-    padding-top: 1em;
-}
-
-.title {
-    font-size: 7em;
-    font-family: 'Baloo Tammudu', cursive;
-    /*color: red;*/
+    padding-top: 0.5rem;
 }
 
 .w_t_stage {
@@ -45,6 +53,8 @@ div {
 }
 
 .helpBtn { 
+    font-size: 1rem;
+    font-family: 'Roboto Slab', serif;
 }
 
 a:link {
@@ -69,9 +79,9 @@ a:active {
 }
 
 .btn-primary {
-    height: 4em;
-    border-radius: 1em;
-    padding-top: 1.1em;
+    height: ;
+    border-radius: 0.5rem;
+    padding-top: 1.2rem;
 }
 
 .wrd {
