Hot keys starscreen added

--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ a:active {
     display: none;
 }
 
-.hotKeyHelp {
+.hotKey {
     font-family: 'Roboto Slab', serif;
     font-size: 0.4rem;
     color: #A9A9A9;
