--- a/css/styles.css
+++ b/css/styles.css
@@ -1,109 +1,71 @@
 html {
-    font-size: 30px;
-}
+  font-size: 30px; }
 
 body {
-    text-align: center;
-    background-color: white;
-    font-family: 'Baloo Tammudu', cursive;
-}
+  text-align: center;
+  background-color: white;
+  font-family: "Baloo Tammudu", cursive; }
 
 .title {
-    font-size: 4.6rem;
-    font-family: 'Baloo Tammudu', cursive;
-    /*color: red;*/
-}
+  font-size: 4.6rem;
+  font-family: "Baloo Tammudu", cursive; }
 
 h2 {
-    font-size: 1.4rem;
-}
+  font-size: 1.4rem; }
 
 h3 {
-    font-size: 1.1rem;
-}
-
-#inputForm {
-    /*font-size: 2rem;*/
-}
+  font-size: 1.1rem; }
 
 .container {
-    max-width: 1000px;
-}
+  max-width: 1000px; }
 
 .mainer {
-    margin-top: 70px; 
-
-}
-
-div {
-    padding-top: ;
-}
+  margin-top: 70px; }
 
 .w_t_stage {
-    display: none;
-}
+  display: none; }
 
 .t_w_stage {
-    display: none;
-}
+  display: none; }
 
 #basic-addon1 {
-    font-family: 'Roboto Slab', serif;
-    font-weight: bold;
-}
+  font-family: "Roboto Slab", serif;
+  font-weight: bold; }
 
 #yoButton, #nextButton {
-    padding-top: 0.9rem;
-}
+  padding-top: 0.9rem; }
 
-#hintButton2, #answerButton2 { 
-    display: none; 
-    font-family: 'Roboto Slab', serif;
-}
+#hintButton2, #answerButton2 {
+  display: none;
+  font-family: "Roboto Slab", serif; }
 
-.helpBtn { 
-    font-size: 0.85rem;
-    font-family: 'Roboto Slab', serif;
-}
+.helpBtn {
+  font-size: 0.85rem;
+  font-family: "Roboto Slab", serif; }
 
-a:link {
-    color: #000066;
-    background-color: transparent;
-    text-decoration: none;
-}
-a:visited {
-    color: #000066 ;
-    background-color: transparent;
-    text-decoration: none;
-}
-a:hover {
-    color: #000066;
-    background-color: transparent;
-    text-decoration: none;
-}
-a:active {
-    color: #000066;
-    background-color: transparent;
-    text-decoration: none;
-}
+a, a:link, a:visited, a:hover, a:active {
+  color: #000066;
+  background-color: transparent;
+  text-decoration: none; }
 
 .btn-primary {
-    height: ;
-    border-radius: 0.5rem;
-    padding-top: 1.4rem;
-}
+  border-radius: 0.5rem;
+  padding-top: 1.4rem; }
 
 .wrd {
-    font-family: 'Roboto Slab', serif;
-}
+  font-family: "Roboto Slab", serif; }
 
 #nextButton {
-    display: none;
-}
+  display: none; }
 
 .hotKey {
-    font-family: 'Roboto Slab', serif;
-    font-size: 0.4rem;
-    color: #A9A9A9;
-    padding-top: 0rem;
-}
+  font-family: "Roboto Slab", serif;
+  font-size: 0.4rem;
+  color: #A9A9A9;
+  padding-top: 0rem; }
+
+@media only screen and (min-width: 768px) and (orientation: landscape) {
+  html {
+    font-size: 20px; } }
+
+/*# sourceMappingURL=styles.css.map */
