--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ a, a:link, a:visited, a:hover, a:active {
   color: #A9A9A9;
   padding-top: 0rem; }
 
-@media only screen and (min-width: 768px) and (orientation: landscape) {
+@media only screen and (min-width: 1024px) {
   html {
     font-size: 25px; } }
 
