--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ html {
 
 body {
   text-align: center;
-  background-color: blue;
+  background-color: white;
   font-family: "Baloo Tammudu", cursive; }
 
 .title {
